Fix minor bugs: group children shift; grouped and fixed column doesn't break layout;

--- a/src/scss/vue3-easy-data-table.scss
+++ b/src/scss/vue3-easy-data-table.scss
@@ -33,11 +33,6 @@
     background-color: var(--easy-table-scrollbar-corner-color);
   }
 
-  &.table-fixed {
-    table {
-      table-layout: fixed;
-    }
-  }
   &.show-shadow {
     th.shadow, td.shadow {
       &::after {
